--- a/globals.css
+++ b/globals.css
@@ -1,16 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
 @layer base {
   /* 눈송이 애니메이션 */
   @keyframes fall {
     0% {
-      transform: translateY(0);
+      transform: translateY(0) translateX(0);
       opacity: 1;
     }
     100% {
-      transform: translateY(1300px);
+      transform: translateY(1300px) translateX(-200px);
       opacity: 0;
     }
   }
@@ -18,8 +17,8 @@
 
 @layer utilities {
   .snowflake {
-    width: 10px;
-    height: 10px;
+    width: 8px;
+    height: 8px;
     border-radius: 50%;
     background-color: white;
     position: absolute;
