feat: 징글벨 트리거 구현 (이스터에그 제외)

--- a/globals.css
+++ b/globals.css
@@ -13,6 +13,24 @@
       opacity: 0;
     }
   }
+
+  @keyframes shake {
+    0% {
+      transform: rotate(0);
+    }
+    25% {
+      transform: rotate(10deg);
+    }
+    50% {
+      transform: rotate(-10deg);
+    }
+    75% {
+      transform: rotate(10deg);
+    }
+    100% {
+      transform: rotate(0);
+    }
+  }
 }
 
 @layer utilities {
@@ -23,5 +41,8 @@
     background-color: white;
     position: absolute;
     top: -10px;
+  }
+  .shake {
+    animation: shake 0.5s ease-in-out;
   }
 }
