feat : 이미지 드래그 방지 기능 추가

--- a/src/index.css
+++ b/src/index.css
@@ -96,3 +96,12 @@
     animation: shake 0.5s ease-in-out;
   }
 }
+
+* {
+  user-select: none;
+}
+
+img {
+  user-select: none;
+  pointer-events: none;
+}
