--- a/globals.css
+++ b/globals.css
@@ -14,6 +14,14 @@
       opacity: 0;
     }
   }
+
+  * {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+  *::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 @layer utilities {
