--- a/src/index.css
+++ b/src/index.css
@@ -9,32 +9,32 @@
   /* 눈송이 애니메이션 */
   @keyframes fall {
     0% {
-      transform: translateY(0) translateX(0);
+      transform: translateY(0);
     }
     100% {
-      transform: translateY(1300px) translateX(-200px);
+      transform: translateY(var(--fall-distance));
     }
   }
 
-.jua-regular {
-  font-family: 'Jua', serif;
-  font-weight: 400;
-  font-style: normal;
-}
+  .jua-regular {
+    font-family: 'Jua', serif;
+    font-weight: 400;
+    font-style: normal;
+  }
 
-@font-face {
-  font-family: 'Pretendard-Regular';
-  src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff')
-    format('woff');
-  font-weight: 400;
-  font-style: normal;
-}
+  @font-face {
+    font-family: 'Pretendard-Regular';
+    src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff')
+      format('woff');
+    font-weight: 400;
+    font-style: normal;
+  }
 
-.birthstone-regular {
-  font-family: 'Birthstone', serif;
-  font-weight: 400;
-  font-style: normal;
-}
+  .birthstone-regular {
+    font-family: 'Birthstone', serif;
+    font-weight: 400;
+    font-style: normal;
+  }
 
   @keyframes shake {
     0% {
@@ -53,6 +53,20 @@
       transform: rotate(0);
     }
   }
+  html,
+  body {
+    overflow-x: hidden; /* x축 스크롤 비활성화 */
+    max-width: 100vw; /* 전체 너비를 100%로 설정 */
+    margin: 0; /* 기본 여백 제거 */
+  }
+
+  * {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+  *::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 @layer utilities {
@@ -66,17 +80,5 @@
   }
   .shake {
     animation: shake 0.5s ease-in-out;
-  }
-  .animate-fall {
-    animation: fall linear infinite;
-  }
-
-  .snow {
-    position: absolute;
-    width: 10px;
-    height: 10px;
-    background: white;
-    border-radius: 50%;
-    opacity: 0.8;
   }
 }
