feat : 모달 오픈 상태에 스크롤이 안되도록 기능 추가

--- a/src/index.css
+++ b/src/index.css
@@ -105,3 +105,9 @@ img {
   user-select: none;
   pointer-events: none;
 }
+
+.over_hidden {
+  overflow-y: hidden;
+  position: fixed;
+  width: 100%;
+}
